--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,4 @@
-{% set maturin_version = ">=1.8.2,<2" %}
-{% set maturin_version = ">=1.8.2,<2" %}
-{% set maturin_version = ">=1.8.2,<2" %}
-{% set maturin_version = ">=1.8.2,<2" %}
-{% set maturin_version = ">=1.8.2,<2" %}
-{% set maturin_version = ">=1.8.2,<2" %}
-{% set maturin_version = ">=1.8.2,<2" %}
+
 {% set maturin_version = ">=1.8.2,<2" %}
 {% set version = "0.12.45" %}
 
@@ -39,6 +33,7 @@ requirements:
     - python
     - anyio >=4.4.0,<5.0.0
     - typing_extensions >=4.14.0
+    - exceptiongroup
 
 test:
   requires:
